argocd/applications/core/traefik/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-route
  namespace: traefik
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik

  hostnames:
    - traefik.kube.squatch.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: api@internal
          weight: 1
          
    - matches:
        - path:
            type: PathPrefix
            value: /ping
      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: ping@internal
          weight: 1

    - matches:
        - path:
            type: PathPrefix
            value: /metrics
      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: prometheus@internal
          weight: 1
